# selain

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  selain.desktop
doc/: commands.md  keyboard.md
icons/: CMakeLists.txt
include/selain/: command-entry.hpp  command-input.hpp  command.hpp  hint-context.hpp  keyboard.hpp  main-window.hpp  mode.hpp  notification.hpp  split-view.hpp  status-bar.hpp  tab-container.hpp  tab-content.hpp  tab-label.hpp  tab-split.hpp  tab-status.hpp  tab-window.hpp  tab.hpp  theme.hpp  utils.hpp  version.hpp  view.hpp  web-context.hpp  web-settings.hpp  web-view.hpp
src/: command-entry.cpp  command-input.cpp  command.cpp  hint-context.cpp  hint-mode.js  keyboard.cpp  main-window.cpp  main.cpp  mode.cpp  split-view.cpp  status-bar.cpp  tab-label.cpp  tab-status.cpp  tab-window.cpp  tab.cpp  theme.cpp  utils.cpp  view.cpp  web-context.cpp  web-settings.cpp  web-view.cpp
